[workspace]
resolver = "2"
members = [
  "kernel",
  "run",
]

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = 127 }
nonstandard_style = { level = "deny", priority = 126 }
rust_2018_idioms = { level = "deny", priority = 1 }
missing_debug_implementations = { level = "deny", priority = 50 }
single_use_lifetimes = { level = "warn", priority = 125 }
trivial-numeric-casts = { level = "deny", priority = 10 }

[workspace.lints.clippy]
await_holding_lock = "warn"
borrow_as_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
match_on_vec_items = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
option_option = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
# TODO: fires many times, fix then enable.
# undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"
