[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
bootloader_api = "0.11.8"
log = "0.4.22"
uart_16550 = "0.3.1"
x86_64 = "0.15.1"
spin = "0.9.8"
linked_list_allocator = "0.10.5"
spinning_top = "0.3.0"
buddy_system_allocator = { version = "0.11.0",features = ["use_spin"]}

[dependencies.noto-sans-mono-bitmap]
version = "0.1.2"
default-features = false
features = ["regular", "size_14"]

[build-dependencies]
# kvm = { path = "../kvm", artifact = "bin", target = "x86_64-unknown-none"} 
