[package]
name = "run"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run"
path = "src/boot.rs"

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.91"
bootloader = "0.11.7"
clap = { version = "4.5.20", features = ["derive"] }
noto-sans-mono-bitmap = "0.3.0"
ovmf-prebuilt = "0.1.0-alpha.1"
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
